syntax = "proto3";
import "types.proto";
import "primitive_types.proto";
package uchain.net.types;

message PeerNode {
  bytes pub_key = 1;
  bytes nonce = 2;
}

message CurrentHeadMessage {
  odana.types.BlockHeader block_header = 1;
}

message BroadcastTransactionMessage {
  repeated odana.types.SignedTransaction txs = 1;
}

message BroadcastBlockMessage {
  odana.types.Block block = 1;
}

message GetCurrentHeadMessage {
  string sender = 1;
}

message GetBlockHeaderMessage {
  odana.primitive_types.H256 from = 1;
  odana.primitive_types.H256 to = 2;
}

message FindBlocksMessage {
  uint32 from = 1;
  uint32 limit = 2;
}

message BlockTransactionsMessage {
  repeated odana.types.SignedTransaction txs = 1;
}

message BlocksMessage {
  repeated odana.types.Block blocks = 1;
}

message BlockHeaderMessage {
  repeated odana.types.BlockHeader block_headers = 1;
}

message BlocksToDownloadMessage {
  repeated bytes block_hashes = 1;
}

message PeerMessage {
  oneof msg {
    CurrentHeadMessage get_currenthead = 1;
    CurrentHeadMessage current_head = 2;
    GetBlockHeaderMessage get_blockheader = 3;
    BlocksToDownloadMessage get_blocks = 4;
    FindBlocksMessage find_blocks = 5;
    BlockHeaderMessage blockheader = 6;
    BlocksMessage blocks = 7;
    BroadcastTransactionMessage broadcast_transaction = 8;
    BroadcastBlockMessage broadcast_block = 9;
  }
}